--- a/youtube.html
+++ b/youtube.html
@@ -44,11 +44,13 @@
         display: inline-block;
         width: 50px;
         vertical-align: top;
+        background-color: gray;
       }
 
       .video-info {
         display: inline-block;
-        width: 200px;
+        width: 245px;
+        background-color: gray;
       }
 
       .profile-picture {
@@ -97,16 +99,24 @@
     </div>
 
     <div class="video-preview">
-      <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
-      <p class="video-title">
-        Try Not To Laugh Challenge #9
-      </p>
-      <p class="video-author">
-        Markiplier
-      </p>
-      <p class="video-stats">
-        19M views &#183; 4 years ago
-      </p>
+      <div class="thumbnail-row">
+        <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+      </div>
+        <div class="channel-picture">
+          <img class="profile-picture" src="channel-pictures/channel-2.jpeg">
+        </div>
+        <div class="video-info">
+          <p class="video-title">
+            Try Not To Laugh Challenge #9
+          </p>
+          <p class="video-author">
+            Markiplier
+          </p>
+          <p class="video-stats">
+            19M views &#183; 4 years ago
+          </p>
+        </div>
+      <div>
     </div>
 
   </body>
