--- a/grid.html
+++ b/grid.html
@@ -12,7 +12,6 @@
         <div style="background-color: lightblue;">div 1</div>
         <div style="background-color: lightpink;">div 2 <p>text</p></div>
     </div>
-
     <div style="
         margin-top: 30px;
         display: grid;
@@ -23,28 +22,14 @@
         <div style="background-color: lightblue;">200px</div>
         <div style="background-color: lightpink;">100px</div>
     </div>
-
-    <div style="
-        margin-top: 30px;
-        display: grid;
-        grid-template-columns: 100px 1fr;
-    ">
-        <div style="background-color: lightblue;">100px</div>
-        <div style="background-color: lightpink;">1fr</div>
-
     <div style="
         margin-top: 30px;
         display: grid;
         grid-template-columns: 100px 1fr 2fr;
     ">
-        <div style="background-color: 
-        lightblue;">100px</div>
-        <div style="background-color: 
-        lightpink;">1fr</div>
-        <div style="background-color:
-         lightblue;">2fr</div>
-        
-
+        <div style="background-color: lightblue;">100px</div>
+        <div style="background-color: lightpink;">1fr</div>
+        <div style="background-color: lightpink;">fr</div>
     </div>
 
 </body>  
